# dmsdos

./: .gitignore  BUGS  CMakeLists.txt  COPYING  DIFFS.TXT  INSTALL.TXT  Makefile  NEWS  README  cmpdisk.README  cvf.diff-2.0.33  cvf.diff-2.0.33+fat32-0.2.8  dmsdos-config.h.in  dmsdos.lsm  in-kernel.sh  magic.sh  mkdist.sh  patch-2.3.sh  patch.sh
cmpdisk/: cmpdisk.cpp
doc/: FAQ  cvf-fat.doc  cvfinfo.doc  dmsdos.doc  ioctl.doc  libdmsdos.doc  messages.doc  patent.doc  testing.doc  troubleshooting.doc
kernel/: README  conf.sh  kerneld-autoload.diff
kernel/diffs/: cvf-uvfat.diff-2.0.33  in-kernel-uninstall.sh
kernel/src/: Makefile  Makefile.kernel  Makefile.module  dblspace_buffer.c  dblspace_fileops.c  dblspace_fileops.c-2.0.33  dblspace_fileops.c-2.1.80  dblspace_fileops.c-2.3.99  dblspace_virtual.c  my_break.h
man/: Makefile  cvflist.1  cvftest.1  dutil.1  mcdmsdos.1
misc/: magic
old/: PORT_TO_WIN32  dmsdosd.1
patches/: DIFFS.TXT  cvf-fat-2.0.diff  cvf.c  cvf.c.README  cvf.diff-2.0.33  cvf.diff-2.0.34  fat-truncate-bugfix.diff  fat_cvf.txt  fat_cvf.txt-2.3.99  in-kernel-2.0.35.diff  linux-2.2.13-dmsdos.patch-1  linux-2.3.30-pre6-dmsdos.patch-1  msdos-rmdir-bugfix.diff  vfat-brelse-bugfix.diff
src/: .config  BUGS  Config.in  Configure  Configure.help  Makefile  Makefile.cygwinb20  Makefile.old  Menuconfig  cctest.c  check.sh  cmpdisk.README  conf-wrapper.sh  config.debug  config.high-traffic-write  config.in  config.low-traffic-write  config.small-module  cvflist.c  cvftest.1  cvftest.c  daemon_actions.c  dblspace_alloc.c  dblspace_chk.c  dblspace_compr.c  dblspace_dec.c  dblspace_fileops.c  dblspace_fileops.c-2.3.10  dblspace_interface.c  dblspace_ioctl.c  dblspace_methsq.c  dblspace_tables.c  dblspace_virtual.c  dcread.c  depend  dmsdos-config.default  dmsdos.h  dmsdosfsck.8  dmsdosfsck.c  dstacker_alloc.c  (+15 more)
